--- a/LIODEN_css-Com-32469.css
+++ b/LIODEN_css-Com-32469.css
@@ -1408,7 +1408,7 @@
 	}
 
 	.s-chat-sidebar #chatMessagePinned.s-chat-message__pinned {
-		background: url("https://imgur.com/OOf1648.png") no-repeat 10px 5px;
+		background: url("https://imgur.com/tJ8MkdD.png") no-repeat 10px 5px;
 	}
 
 	/* Even Messages */
