--- a/LIODEN_css-Com-32469.css
+++ b/LIODEN_css-Com-32469.css
@@ -1,5 +1,6 @@
 /*
-	CSS made by Atticus (#198107)/Ater (#206739), for use by #32469 only. 
+	CSS made by Atticus (#198107)/Ater (#206739), for use by #32469 only.
+	Stars Animation Credit: https://codepen.io/saransh/pen/BKJun.
 */
 
 
