--- a/LIODEN_css-Com-32469-Cave.css
+++ b/LIODEN_css-Com-32469-Cave.css
@@ -1723,6 +1723,7 @@
 		width: 50px;
 		height: 30px;
 		padding-left: 50px;
+		z-index: 101;
 		transition: 0.5s !important;
 	}
 
@@ -1748,6 +1749,7 @@
 		position: absolute;
     	top: 0;
     	left: 0;
+    	z-index: 101;
 		transition: opacity 0.5s;
 	}
 
